--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,13 @@ spring:
               singlelogout:
                 binding: POST
                 response-url: "{baseUrl}/logout/saml2/slo"
+          mocksaml:
+            assertingparty:
+              metadata-uri: https://mocksaml.com/api/saml/metadata
+            signing:
+              credentials:
+                - private-key-location: classpath:local.key
+                  certificate-location: classpath:local.crt
+              singlelogout:
+                binding: POST
+                response-url: "{baseUrl}/logout/saml2/slo"
