--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,16 +10,14 @@ spring:
               credentials:
                 - private-key-location: classpath:local.key
                   certificate-location: classpath:local.crt
-              singlelogout:
-                binding: POST
-                response-url: "{baseUrl}/logout/saml2/slo"
-          mocksaml:
-            assertingparty:
-              metadata-uri: https://mocksaml.com/api/saml/metadata
-            signing:
-              credentials:
-                - private-key-location: classpath:local.key
-                  certificate-location: classpath:local.crt
-              singlelogout:
-                binding: POST
-                response-url: "{baseUrl}/logout/saml2/slo"
+            singlelogout:
+              binding: POST
+              response-url: "{baseUrl}/logout/saml2/slo"
+
+          
+
+server:
+  servlet:
+    session:
+      cookie:
+        same-site: "none"
